# rye_torch_cu121

./: README.md  don't_remove_this_dir.md  pyproject.toml
src/troch_cuda121/: __init__.py  sp_matmul.py  sp_matmul_cuda.py
src/troch_cuda121/ELYZA/: main.py
src/troch_cuda121/hiyoko_sparse/: main.py
src/troch_cuda121/mnist/: main.py  mlp.py
src/troch_cuda121/transformer/: main.py
